# brscans-backend

./: .gitignore  .tool-versions  Aptfile  Pipfile  Procfile  README.md  db.sqlite3  go.mod  manage.py  pyproject.toml  requirements.txt  zappa_settings.json
brscans/: asgi.py  pagination.py  settings.py  urls.py  wsgi.py
brscans/authentication/: apps.py  models.py  serializers.py  urls.py  views.py
brscans/authentication/migrations/: 0001_initial.py
brscans/manhwa/: admin.py  apps.py  models.py  serializers.py  views.py
brscans/manhwa/management/commands/: cleanup_ghost_chapters.py  data.json  fill_caps.py  test_fill.py  test_translation_flow.py  teste.py  translate_manhwas.py  verify_translation_flow.py
brscans/manhwa/migrations/: 0001_initial.py  0002_alter_manhwa_author.py  0003_imagevariants_manhwa_thumbnail.py  0004_manhwa_external_hash_alter_manhwa_external_id.py  0005_rename_external_hash_manhwa_hash_external_id_and_more.py  0006_remove_imagevariants_large.py  0007_page.py  0008_alter_page_images.py  0009_alter_chapter_slug_alter_imagevariants_identifier_and_more.py  0010_remove_imagevariants_identifier_and_more.py  0011_chapter_identifier.py  0012_alter_chapter_identifier_alter_chapter_slug_and_more.py  0013_manhwa_identifier.py  0014_remove_manhwa_source_manhwa_url.py  0015_rename_url_manhwa_source.py  0016_delete_source_alter_manhwa_source.py  0017_chapter_source.py  0018_chapter_quantity_pages_page_quantity_merged.py  0019_manhwa_is_nsfw.py  0020_imagevariants_raw_alter_manhwa_genres.py  0021_imagevariants_upscaled.py  0022_alter_manhwa_external_id.py  0023_page_order.py  0024_alter_page_options_page_translation_cache.py  0025_remove_page_translation_cache.py  0026_chapter_created_at.py  0027_readinghistory_readchapter.py  0028_comment.py  0029_notification.py  0030_manhwa_original_description_manhwa_original_title.py
brscans/manhwa/tasks/: fix_manhwas.py  images_variants.py  sync_chapter.py  sync_chapters.py  sync_manhwas.py  translate_manhwa.py  upscale.py
brscans/manhwa/views/: chapter.py  comment_vw.py  image.py  manhwa_chapter.py  manhwa_vw.py  notification_vw.py
brscans/services/: s3.py
brscans/utils/: anime4k.py  generate_presigned_url.py  image.py  image_url.py  resize_image.py
brscans/wrapper/: apps.py  views.py
brscans/wrapper/sources/: Cerise.py  FlowerManga.py  Gekkou.py  Generic.py  KingOfShojo.py  KunManga.py  MangaBuddy.py  MangaHub.py  Mangadass.py  ManhuaFast.py  ManhuaRead.py  Manhuaus.py  Manhwahub.py  Neroxus.py  Nexo.py  RizzFables.py  ThreeHentai.py  __init__.py
cmd/server/: main.go
internal/api/: auth.go  chapter.go  comment.go  image.go  manhwa.go  notification.go  router.go  router_test.go
internal/app/: store.go
