[project]
name = "brscans-backend"
version = "0.1.0"
description = ""
authors = [{ name = "Samuel Pereira da Silva", email = "samuel.silva513@etec.sp.gov.br" }]
requires-python = ">=3.11.13,<3.12"
readme = "README.md"
dependencies = [
    "django==4.2.9",
    "djangorestframework==3.14.0",
    "black==23.12.1",
    "httpx==0.26.0",
    "bs4==0.0.2",
    "unidecode==1.3.8",
    "requests>=2.32.3,<3",
    "django-cors-headers>=4.4.0,<5",
    "whitenoise>=6.7.0,<7",
    "gunicorn>=22.0.0,<23",
    "cloudscraper",
    "drf-nested-routers>=0.94.1,<0.95",
    "pillow>=10.4.0,<11",
    "xmltodict>=0.13.0,<0.14",
    "psycopg2-binary>=2.9.9,<3",
    "django-storages>=1.14.3,<2",
    "zappa>=0.59.0,<0.60",
    "tldextract>=5.1.2,<6",
    "replicate>=0.28.0,<0.29",
    "django-debug-toolbar>=4.4.6,<5",
    "setuptools>=75.8.0,<76",
    "load-dotenv>=0.1.0,<0.2",
    "python-dotenv>=1.0.1,<2",
    "drf-spectacular>=0.28.0,<0.29",
    "django-filter>=25.1,<26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brscans"]

[dependency-groups]
dev = ["ruff>=0.13.1"]

[tool.ruff]
line-length = 80